# speech-to-text

./: .gitignore  LICENSE  README.md  pyproject.toml  transcribe.py
engines/: __init__.py  base.py  qwen3_asr.py  whisper_turbo.py  whisper_v3.py
