[project]
name = "speech-to-text"
version = "0.1.0"
description = "本地语音转文字工具，支持 Whisper / Qwen3-ASR 多引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Paul Zhao"},
]
keywords = ["speech-to-text", "whisper", "qwen3-asr", "transcription", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.optional-dependencies]
whisper-v3 = ["faster-whisper"]
whisper-turbo = ["mlx-whisper"]
qwen3-asr = ["mlx-qwen3-asr"]
all = ["faster-whisper", "mlx-whisper", "mlx-qwen3-asr"]
